--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="#">
+                    <a href="./html/goods_phone.html">
                         <img src="./images/good_5.jpg" class="img_goods" alt="">
                         <h3 class="goods_name">mobile phone</h3>
                         <h4 class="goods_price">￥ 6999</h4>
